[workspace]
resolver = "2"
members = [
    "programs/neet_clearing_house",
    "programs/neet_amm",
    "programs/neet_oracle_adapter",
    "programs/neet_funding",
    "programs/neet_liquidation",
    "programs/neet_insurance",
    "programs/neet_treasury",
]

[workspace.metadata.solana]
tools-version = "v1.52"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]